update actions to build on tags

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,8 @@ on:
     branches:
       - github-runner
       - main
-  pull_request:
+    tags:
+      - '*'
   release:
     types: [published]
 
