--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v4
       with:
+        fetch-depth: 0
         repository: 'sei-noconnor/crucible-appliance'
         
     - name: Packer Version
