--- a/argocd/apps/prod-argo/root-app.yaml
+++ b/argocd/apps/prod-argo/root-app.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     path: argocd/apps/prod-argo/apps
     repoURL: https://github.com/sei-noconnor/crucible-appliance.git
-    targetRevision: offline-reorg
+    targetRevision: main
     directory:
       recurse: false
   sources: []
