--- a/argocd/apps/prod-argo/apps/1-applications/keycloak.config.json
+++ b/argocd/apps/prod-argo/apps/1-applications/keycloak.config.json
@@ -1,7 +1,7 @@
 {
     "app": {
         "project_name" : "keycloak",
-        "project_branch" : "offline-reorg",
+        "project_branch" : "main",
         "namespace" : "default",
         "manifest_type": "kustomize",
         "helm_repo" : "",
