--- a/argocd/apps/prod-k8s/1-applications/topomojo/kustomize/base/files/topomojo.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/topomojo/kustomize/base/files/topomojo.values.yaml
@@ -24,7 +24,7 @@ topomojo-api:
       nginx.ingress.kubernetes.io/proxy-body-size: 6g
       kubernetes.io/ingress.class: nginx
     hosts:
-    - host: crucible.local
+    - host: <path:fortress-prod/data/shared#domain>
       paths:
       - path: /topomojo/api
         pathType: ImplementationSpecific
@@ -33,16 +33,16 @@ topomojo-api:
       - path: /topomojo/docs
         pathType: ImplementationSpecific
     tls:
-    - secretName: topomojo-tls
+    - secretName: <path:fortress-prod/data/shared#domain>-tls
       hosts:
-      - crucible.local
+      - <path:fortress-prod/data/shared#domain>
 
   # storage - either an existing pvc, the size for a new pvc, or emptyDir
   storage:
     existing: ""
     mode: ReadWriteOnce
-    size: 1Gi
-    class: local-path
+    size: 20Gi
+    class: nfs
     
 
   autoscaling:
@@ -64,7 +64,7 @@ topomojo-api:
         cp /start/*.crt /usr/local/share/ca-certificates && update-ca-certificates
         cd /app && dotnet TopoMojo.Api.dll
       cacert.crt: |-
-
+        <path:fortress-prod/data/shared#fortress-tls-fullchain>
 
 
   # Config app settings with environment vars.
@@ -73,34 +73,33 @@ topomojo-api:
   env:
     PathBase: "/topomojo"
     Database__Provider: PostgreSQL
-    Database__ConnectionString: Server=appliance-postgresql.postgres.svc.cluster.local;Port=5432;Database=topomojo;Username=postgres;Password=crucible;SSL Mode=Prefer;Trust Server Certificate=true;
-    Database__AdminId: d29518c4-f61c-4284-81c4-f2fbd79e6e9a
+    Database__ConnectionString: <path:fortress-prod/data/topomojo#topomojo-api-connection-string>
+    Database__AdminId: <path:fortress-prod/data/shared#oauth-admin--guid>
     Database__AdminName: Administrator
     Cache__SharedFolder: ""
     FileUpload__IsoRoot: /mnt/tm/iso
     FileUpload__TopoRoot: /mnt/tm/files
     FileUpload__DocRoot: /mnt/tm/_docs
     # FileUpload__MaxFileBytes: 0
-    Oidc__Authority: https://crucible.local/keycloak/realms/crucible
+    Oidc__Authority: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-authority-url>
     OpenApi__Client__ClientId: topomojo-api
     Oidc__Audience: "topomojo-api"
-    OpenApi__Client__AuthorizationUrl: https://crucible.local/keycloak/realms/crucible/protocol/openid-connect/auth
-    OpenApi__Client__TokenUrl: https://crucible.local/keycloak/realms/crucible/protocol/openid-connect/token
+    OpenApi__Client__AuthorizationUrl: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-authorization-url>
+    OpenApi__Client__TokenUrl: https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-token-url>
     
     ApiKeyClients__0__Id: gameengine
     ApiKeyClients__0__Key: crucible
     ApiKeyClients__0__Scope: gameboard
-    Core__ConsoleHost: crucible.local/console
-    Pod__Url: 
-    Pod__User: 
-    Pod__Password: 
-    Pod__PoolPath: 
-    Pod__Uplink: 
-    Pod__VmStore: 
-    Pod__IsoStore: 
-    Pod__DiskStore: 
+    Core__ConsoleHost: https://<path:fortress-prod/data/shared#domain>/console
+    Pod__Url: https://<path:fortress-prod/data/vsphere#vsphere-server>
+    Pod__User: <path:fortress-prod/data/vsphere#vsphere-user>
+    Pod__Password: <path:fortress-prod/data/vsphere#vsphere-password>
+    Pod__PoolPath: <path:fortress-prod/data/vsphere#vsphere-datacenter>/<path:fortress-prod/data/vsphere#vsphere-cluster>
+    Pod__Uplink: <path:fortress-prod/data/vsphere#vsphere-dv-switch>
+    Pod__VmStore: [<path:fortress-prod/data/vsphere#datastore>] topomojo/vmstore
+    Pod__IsoStore: [<path:fortress-prod/data/vsphere#datastore>] topomojo/iso
+    Pod__DiskStore: [<path:fortress-prod/data/vsphere#datastore>] topomojo/diskstore
     Pod__TicketUrlHandler: "none"
-    Pod__ConsoleUrl: 
     Pod__Vlan__Reservations__0__Id: 
     Pod__Vlan__Reservations__0__Name: 
     
@@ -111,7 +110,7 @@ topomojo-api:
     Logging__Console__DisableColors: false
     Logging__LogLevel__Default: Debug
     # Headers__LogHeaders: false
-    Headers__Cors__Origins__0: https://crucible.local
+    Headers__Cors__Origins__0: https://<path:fortress-prod/data/shared#domain>
     # Headers__Cors__Methods__[0]: ""
     # Headers__Cors__Headers__[0]: ""
     # Headers__Cors__AllowAnyOrigin: false
@@ -176,17 +175,17 @@ topomojo-ui:
     annotations:
       cert-manager.io/cluster-issuer: ca-issuer
       nginx.ingress.kubernetes.io/proxy-body-size: 6g
-      kubernetes.io/ingress.class: nginx
+      kubernetes.io/ingress.class: <path:fortress-prod/data/shared#ingress-class>
       # kubernetes.io/tls-acme: "true"
     hosts:
-    - host: crucible.local
+    - host: <path:fortress-prod/data/shared#domain>
       paths:
       - path: /topomojo
         pathType: ImplementationSpecific
     tls:
-    - secretName: topomojo-tls
+    - secretName: <path:fortress-prod/data/shared#domain>-tls
       hosts:
-      - crucible.local
+      - <path:fortress-prod/data/shared#domain>
 
   resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -232,11 +231,11 @@ topomojo-ui:
       "apphost": "",
       "mkshost": "",
       "oidc": {
-        "authority": "https://crucible.local/keycloak/realms/crucible",
+        "authority": "https://<path:fortress-prod/data/shared#domain>/<path:fortress-prod/data/shared#oauth-provider>/<path:fortress-prod/data/shared#oauth-authority-url>",
         "client_id": "topomojo-ui",
-        "redirect_uri": "https://crucible.local/topomojo/oidc",
-        "silent_redirect_uri": "https://crucible.local/topomojo/oidc-silent.html",
-        "post_logout_redirect_uri": "https://crucible.local/topomojo",
+        "redirect_uri": "https://<path:fortress-prod/data/shared#domain>/topomojo/oidc",
+        "silent_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/topomojo/oidc-silent.html",
+        "post_logout_redirect_uri": "https://<path:fortress-prod/data/shared#domain>/topomojo",
         "response_type": "code",
         "scope": "openid profile topomojo-api",
         "automaticSilentRenew": true,
