add security context to topomojo-api so certificates can be added

--- a/argocd/apps/prod-k8s/1-applications/topomojo/kustomize/base/files/topomojo-0-4-3.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/topomojo/kustomize/base/files/topomojo-0-4-3.values.yaml
@@ -41,17 +41,17 @@ topomojo-api:
   podSecurityContext: {}
     # fsGroup: 2000
 
-  securityContext: {}
+  securityContext:
     # capabilities:
     #   drop:
     #   - ALL
-    # readOnlyRootFilesystem: true
-    # runAsNonRoot: true
-    # runAsUser: 1000
+    readOnlyRootFilesystem: false
+    runAsNonRoot: false
+    runAsUser: 0
 
-  service: {}
-    # type: ClusterIP
-    # port: 80
+  service: 
+    type: ClusterIP
+    port: 80
 
   ingress:
     enabled: true
