change default domain to crucible.io

--- a/argocd/apps/prod-k8s/1-applications/keycloak/kustomize/base/files/crucible.yaml
+++ b/argocd/apps/prod-k8s/1-applications/keycloak/kustomize/base/files/crucible.yaml
@@ -74,10 +74,10 @@ emailMatchAutoJoinGroup:
       - ".mil"
       - ".cert.org"
       - ".sei.cmu.edu"
-      - ".crucible.local"
+      - ".crucible.io"
 
   - description: DoD IL2 Users
     groups:
       - "/Impact Level 2 Authorized"
     domains:
-      - "@crucible.local"
+      - "@crucible.io"
