--- a/argocd/apps/prod-k8s/1-applications/topomojo/kustomize/base/console-ingress.yaml
+++ b/argocd/apps/prod-k8s/1-applications/topomojo/kustomize/base/console-ingress.yaml
@@ -18,7 +18,7 @@ metadata:
       }
 spec:
   rules:
-  - host: crucible.local
+  - host: crucible.io
     http:
       paths:
       - path: /console
@@ -31,5 +31,5 @@ spec:
   tls:
   - secretName: topomojo-tls
     hosts:
-      - crucible.local
+      - crucible.io
     
