--- a/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/base/files/mkdocs-material.values.yaml
+++ b/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/base/files/mkdocs-material.values.yaml
@@ -49,14 +49,14 @@ ingress:
       rewrite ^(/start)$ $1/ redirect;
     cert-manager.io/cluster-issuer: ca-issuer
   hosts:
-    - host: crucible.local
+    - host: crucible.io
       paths:
         - path: /start(/|$)(.*)
           pathType: ImplementationSpecific
   tls:
     - secretName: mkdocs-material-tls
       hosts:
-        - crucible.local
+        - crucible.io
 
 # storage - either an existing pvc, the size for a new pvc, or emptyDir
 storage:
@@ -69,7 +69,7 @@ storage:
 ##################
 
 ## giturl is the url of the git repository to serve as a static site
-giturl: https://crucible.local/gitea/crucible/mkdocs
+giturl: https://crucible.io/gitea/crucible/mkdocs
 
 ## gitbranch sets which repo branch to publish
 gitbranch: "main"
@@ -88,7 +88,7 @@ cacert: ""
 ## mkdocs YAML configuration
 mkdocs: {}
 #  site_name: My Site
-#  site_url: https://crucible.local
+#  site_url: https://crucible.io
 #  theme:
 #    name: material
 
