--- a/argocd/install/longhorn/kustomize/base/files/longhorn.values.1.5.4.yaml
+++ b/argocd/install/longhorn/kustomize/base/files/longhorn.values.1.5.4.yaml
@@ -239,7 +239,7 @@ ingress:
   ## Can replace the kubernetes.io/ingress.class annotation on v1.18+
   ingressClassName: nginx
 
-  host: crucible.local
+  host: crucible.io
 
   ## Set this to true in order to enable TLS on the ingress record
   tls: true
