adds kustomization patch to gitea runner for the crucible root ca - fixes bug where act_runner token could not be created, namespace was missing on helm chart kustomization spec

--- a/argocd/install/gitea/kustomize/base/files/gitea.values.yaml
+++ b/argocd/install/gitea/kustomize/base/files/gitea.values.yaml
@@ -60,6 +60,9 @@ actions:
         runner:
           labels:
             - "crucible:docker://crucible.io/fortress-manifests/node:20-bookworm-slim"
+        container:
+          force_pull: false
+          force_rebuild: false
 
   provisioning:
     enabled: true
