--- a/argocd/install/gitea/kustomize/base/kustomization.yaml
+++ b/argocd/install/gitea/kustomize/base/kustomization.yaml
@@ -8,6 +8,7 @@ helmCharts:
   repo: https://dl.gitea.io/charts/
   releaseName: appliance
   valuesFile: files/gitea.values.yaml
+  namespace: gitea
 resources: 
 - namespace.yaml
 
