--- a/.github/workflows/act-runner.yaml
+++ b/.github/workflows/act-runner.yaml
@@ -4,12 +4,17 @@ on: [push]
 
 jobs:
   Explore-Gitea-Actions:
-    runs-on: crucible
+    runs-on: ubuntu-22.04
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ gitea.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by Gitea!"
       - run: echo "🔎 The name of your branch is ${{ gitea.ref }} and your repository is ${{ gitea.repository }}."
-      - run: apt-get update -y && apt-get install -y git
+      - name: Login to crucible.io registry
+        uses: docker/login-action@v3
+        with:
+          registry: crucible.io
+          username: ${{ github.actor }}
+          password: crucible
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ gitea.repository }} repository has been cloned to the runner."
