--- a/.github/workflows/act-runner.yaml
+++ b/.github/workflows/act-runner.yaml
@@ -4,22 +4,26 @@ on: [push]
 
 jobs:
   Explore-Gitea-Actions:
-    runs-on: ubuntu-22.04
+    runs-on: builder
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ gitea.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by Gitea!"
       - run: echo "🔎 The name of your branch is ${{ gitea.ref }} and your repository is ${{ gitea.repository }}."
       - name: Login to crucible.io registry
-        uses: docker/login-action@v3
+        uses: https://github.com/docker/login-action@v3
         with:
           registry: crucible.io
           username: ${{ github.actor }}
           password: crucible
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ gitea.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ gitea.workspace }}
+      - name: Set up QEMU
+        uses: https://github.com/docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: https://github.com/docker/setup-buildx-action@v3
+      - name: Build and push
+        uses: https://github.com/docker/build-push-action@v6
+        with:
+          context: "{{defaultContext}}:.github/runners/."
+          push: true
+          tags: crucible.io/fortress-manifests/github-runner:crucible
+      
       - run: echo "🍏 This job's status is ${{ job.status }}."
