--- a/argocd/install/argocd/kustomize/base/files/argocd.values.yaml
+++ b/argocd/install/argocd/kustomize/base/files/argocd.values.yaml
@@ -100,7 +100,7 @@ configs:
     controller.repo.server.timeout.seconds: 60
 
       ## Server properties -- Run server without TLS
-    server.insecure: false
+    server.insecure: true
       # -- Value for base href in index.html. Used if
       # Argo CD is running behind reverse proxy under
       # subpath different from /
@@ -364,19 +364,18 @@ controller:
 server:
   # -- Argo CD server name
   name: server
+  
   ingress:
     # -- Enable an ingress resource for the Argo CD server
     enabled: true
+  
     # -- Additional ingress annotations
     #
     annotations:
-      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
-      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       cert-manager.io/cluster-issuer: ca-issuer
-    # -- Additional ingress labels
-    labels: {}
     # -- Defines which ingress controller will implement the resource
     ingressClassName: "nginx"
+    hostname: cd.crucible.io
 
     # -- List of ingress hosts
     ## Argo Ingress.
@@ -389,7 +388,7 @@ server:
     paths:
     - backend:
         service:
-          name: argo-cd-argocd-server
+          name: appliance-argocd-server
           port:
             number: 443
     # -- Ingress path type. One of `Exact`, `Prefix` or `ImplementationSpecific`
