--- a/argocd/apps/prod-k8s/1-applications/topomojo/Application.yaml
+++ b/argocd/apps/prod-k8s/1-applications/topomojo/Application.yaml
@@ -17,6 +17,6 @@ spec:
     - CreateNamespace=true
   sources:
   - path: argocd/apps/topomojo/kustomize/overlays/appliance
-    repoURL: file:///crucible-repo/crucible-appliance
+    repoURL: https://github.com/sei-noconnor/crucible-appliance.git
     targetRevision: main
 
