--- a/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/overlays/appliance/kustomization.yaml
@@ -2,16 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - ../../base
+
 patches:
-  - target: 
-      group: kustomize.config.k8s.io
-      version: v1beta1
-      kind: Kustomization
-      name: mkdocs-material
-    path: repo-patch.yaml
-
-  
-
-
-
-
+  - target:
+      kind: CronJob
+      name: appliance-cron
+    path: cronjob.yaml
+  - target:
+      kind: Deployment
+      name: appliance-mkdocs-material
+    path: deployment.yaml
