--- a/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/overlays/appliance/deployment.yaml
+++ b/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/overlays/appliance/deployment.yaml
@@ -4,5 +4,21 @@
     name: appliance-mkdocs-material-entry
     configMap:
       name: appliance-mkdocs-material-entry
-      defaultMode: 0775
+      defaultMode: 0775 
+
+# - op: replace
+#   path: /spec/template/spec/volumes/
+
+# - op: replace
+#   path: /spec/template/spec/volumes/4
+#   value:
+#     name: appliance-mkdocs-material-files
+#     configMap:
+#       name: appliance-mkdocs-material-files
+      
+# - op: replace
+#   path: /spec/template/spec/initContainers/0/volumeMounts/1
+#   value:
+#     name: mkdocs-material-files
+#     mountPath: /docs/docs
         
