--- a/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/apps/prod-k8s/1-applications/mkdocs/kustomize/overlays/appliance/kustomization.yaml
@@ -12,3 +12,7 @@ patches:
       kind: Deployment
       name: appliance-mkdocs-material
     path: deployment.yaml
+  - target:
+      kind: ConfigMap
+      name: appliance-mkdocs-material-entry
+    path: configmap-entry.yaml
